@@ -3,6 +3,8 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix mingw build for linux crosscompiler
+
 0.16.3 release
 
 	* fix python binding backwards compatibility in replace_trackers
